- bump version level of included JLine implementation
- fix a compiler warning when live executing a pipeline including stage UNIQUE
- enable multiline portrait-mode entering of pipeline definitions
- add the source option to the query stage to bring in line with CMS
  (note that this is not documented in the CMS manuals, but behaves identical)
- add CASELESS to the abbrev stage to be CMS compliant (Jeff Hennick)
- BETWEEN and COMPARE stages and tests (Jeff Hennick)
- documentation additions and improvements; added warning about Java 8 being the highest working version


NetRexx 3.08 GA [September 5th, 2019]

- restore OS/2 and Java 6 compatibility
- fixes a serious translator problem introduced in 3.07 - some classes ended up in the wrong files
- suppress generics-related warnings by adding a @SuppressWarnings annotation
- added a NetRexxC.clgMain method for compile, load and go 
- the pipes.runner class now (compiles and directly) runs a pipeline
- default stage separator is now | like on zVM
- added the VM abbreviations of >,<,>> for file I/O device drivers 
- pipes compiler now reliably finds classes it needs
- cleaned up pipes examples to make sure they all compile
- fixed C2X function on specs pipe stage
- added listzip stage
- added zip stage
- added unzip stage
- added -- (comment) stage (Jeff Hennick)
- improved take stage (Jeff Hennick)
- added pipe query stage for version info
- pipes compiler command is now called pipc
- added Pipes for NetRexx docs to distribution
- display failed summaries last - Jason Martin
- squelched the remark that we found a java compiler and other tourist information
- add an experimental rexxcps.nrx from the work of Mike Cowlishaw (for wider evaluation)
- added Joy programming language interpreter in examples/languages
- added two javafx examples in examples/javafx
- resurrected Martin Lafaix' NetRexx Workspace and added to NetRexx distribution (needs java 8)
- with added:
  - pipes execution in tenths of seconds