@@ -320,7 +320,8 @@ problems with the splitting of strings on the command line. This is a
 workable set of aliases to go into a \code{.bash\_profile} script:
 \begin{verbatim}
 alias nrc="java -cp $CLASSPATH org.netrexx.process.NetRexxC"
-alias pipe="java org.netrexx.njpipes.pipes.compiler"
+alias pipe="java org.netrexx.njpipes.pipes.runner"
+alias pipc="java org.netrexx.njpipes.pipes.compiler"
 alias nrs="jrunscript -l netrexx -cp ~/lib/NetRexxC.jar"
 \end{verbatim}
 \end{enumerate}
