@@ -29,5 +29,7 @@ or available at: \url{http://www.netrexx.org}.
 \begin{shaded}\noindent
 The highest Java version that is supported in this version, 3.09, is
 \emph{Java 8}. Higher versions are not yet supported due to changes in
-Java, including incompatibilities introduced with the Java module system.
+Java, including incompatibilities introduced with the Java module
+system. Workarounds are available for higher Java versions; be sure to
+read chapter 4 for information about these.
 \end{shaded}\indent
