@@ -1,0 +1,19 @@
+\chapter{Using a Docker image or the Native Compilers for JVM releases after 9}\label{native compiler}
+While the portable version of the \nr{} cannot find classes that are in Java modules, macOS and Linux users on X86\_64 do not need to install a backlevel JVM if their system already contains a newer version. One alternative is using a Docker image to compile in a container. Another is to use the \emph{native} (i.e. compiled to native machine instructions for the instruction set architecture - operating system combination) versions of the translator.
+\section{Which to choose}
+Apart from having different JVM levels installed and having the ability to change between these with a script, the suggestion is to use a Docker container when you already are using Docker, this is the easiest option. This images also enable quick testing of different versions of NetRexx itself. When Docker is new to you, and you are running modern versions of macOS or Linux on a 64bit Intel machine, then the native executable might be a good alternative. Sometimes these have slightly better compile time performance. In both approaches, the final product is a .class file - except when running \nr{} Pipelines, where no executable is produced.
+\section{Native executables}
+Native executables are produced using the Graal JVM and enable executing JVM-8 level code with a JVM that is included in the executable module. The resulting class files are usable in recent versions of Java, for example JVM versions 9 to 12. They are an experimental feature. The \nr{} translator uses JVM features that require a fallback-JVM for execution; when one installs the Graal JVM for a specific machine architecture, it can be used to produce native executables from \nr{} source that do not require a JVM at all on the target machine. The natively executable versions of the translator are delivered in separate distributions, one for Linux and one for macOS. In each distribution, these executables and jars are to be found:
+\begin{enumerate}
+\item nrc
+\item pipe
+\item pipc
+\item nrws
+\item NetRexxC.jar
+\end{enumerate}
+These should be in a directory on the executable PATH environment variable. Care should be taken to disable alias statements that point to the .class versions of these executables.
+\subsection{Classpath considerations}
+The executable version needs to be able to find NetRexx.jar in a subdirectory build/lib relative to itself. When unzipping the distribution, this has been taken care of. On the \emph{nrc} command, the classpath can be specified. In some cases, it seems necessary to have a copy of NetRexxC.jar in the current directory.\footnote{under investigation; this might be a Graal bug/feature.}
+\section{Docker Image}
+
+
