@@ -24,6 +24,7 @@
 \include{quicktour}
 \include{requirements}
 \include {installation}
+\include{native}
 \include{nrws}
 \include{encodings}
 \include{nojre}
