@@ -12,7 +12,7 @@ class NrVersion
   version = '3.09'
   procdate='06 Oct 2019'
   copyright='Copyright (c) RexxLA, 2011,2019.   All rights reserved.\nParts Copyright (c) IBM Corporation, 1995,2008.'
-  mod = 'Internal'
+  mod = 'PRE'
 
 
   pipesversion = 'Pipelines for NetRexx version 'version
