@@ -6,10 +6,13 @@ NetRexx 3.09 GA [November 15th, 2019]
 - enable multiline portrait-mode entering of pipeline definitions
 - add the source option to the query stage to bring in line with CMS
   (note that this is not documented in the CMS manuals, but behaves identical)
+- stage CONSOLE can now be abbreviated as in CMS
 - add CASELESS to the abbrev stage to be CMS compliant (Jeff Hennick)
-- BETWEEN and COMPARE stages and tests (Jeff Hennick)
+- BETWEEN, BUFFER, APPEND, TAKE and COMPARE stages and tests (Jeff Hennick)
 - documentation additions and improvements; added warning about Java 8 being the highest working version
-
+- experimental native executable versions of the compiler for X86_64
+  versions of macOS and Linux for use with Java versions 9-12
+  
 
 NetRexx 3.08 GA [September 5th, 2019]
 
